--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.5.2"
 # command to install dependencies
 install:
-  - ./install.sh
+  - install.sh
 # command to run tests
 #script:
 #  - pytest
