--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "3.5.2"
 # command to install dependencies
 install:
-  - sh install.sh
+  - sudo sh install.sh
 # command to run tests
 #script:
 #  - pytest
